--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 </p>
 <x3d width='800px' height='800px'>
 <scene>
-<Viewpoint position="-250.45342 -428.62194 955.24590" orientation="-0.43108 -0.89317 -0.12811 0.51162" 
-	centerOfRotation="-116.23896 -499.03521 682.56655" fieldOfView="0.78540" description="defaultX3DViewpointNode">
-</Viewpoint>
+<Viewpoint position="-246.04750 -428.69639 957.38971" orientation="-0.44188 -0.88684 -0.13511 0.49764" 
+	centerOfRotation="-116.23896 -499.03521 682.56655" fieldOfView="0.78540" description="defaultX3DViewpointNode"></Viewpoint>
 <inline url="https://raw.githubusercontent.com/aguillamon3D/practica_UNED/main/practica_final.x3d"> </inline>
 </scene>
 </x3d>
