--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'/>
 </head>
 <body>
-<h1>Práctica final MeshLab</h1>
+<h1>Práctica MeshLab</h1>
 <p>
     Modelo de escultura de plastilina digitalizado por Pedro Cano Olivares usando un escaner Minolta Vivid 910 en el Servicio de digitalización 3D del Laboratorio de Realidad Virtual de la Universidad de Granada.
 </p>
@@ -18,7 +18,7 @@
 </scene>
 </x3d>
 <p>
-    Texto final
+    Gracias 
 </p>
   </body>
 </html>
