--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv='X-UA-Compatible' content='chrome=1'></meta>
 <meta http-equiv='Content-Type' content='text/html;charset=utf-8'></meta>
-<title>Titulo pestaña</title>
+<title>Práctica MeshLab</title>
 <script type='text/javascript' src='https://www.x3dom.org/download/x3dom.js'> </script>
 <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'/>
 </head>
@@ -12,7 +12,7 @@
 <p>
     Modelo de escultura de plastilina digitalizado por Pedro Cano Olivares usando un escaner Minolta Vivid 910 en el Servicio de digitalización 3D del Laboratorio de Realidad Virtual de la Universidad de Granada.
 </p>
-<x3d width='800px' height='800px'>
+<x3d width='600px' height='600px'>
 <scene>
 <inline url="https://raw.githubusercontent.com/aguillamon3D/practica_UNED/main/practica_final.x3d"> </inline>
 </scene>
