--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </p>
 <x3d width='600px' height='600px'>
 <scene>
+<Viewpoint position="-141.33545 -442.58392 905.22307" orientation="-0.52697 -0.84832 -0.05149 0.19757" 
+centerOfRotation="-102.61995 -460.13204 686.69598" fieldOfView="0.78540" description="defaultX3DViewpointNode">
+</Viewpoint>
 <inline url="https://raw.githubusercontent.com/aguillamon3D/practica_UNED/main/practica_final.x3d"> </inline>
 </scene>
 </x3d>
